--- a/_sass/variables-dark.scss
+++ b/_sass/variables-dark.scss
@@ -48,91 +48,12 @@ $table-outer-border-dark: var(--bs-border-width) var(--bs-border-style) $border-
 $table-thead-border-dark: $content-border-dark;
 $table-line-border-dark: $table-outer-border-dark;
 
-$conference-list-bg-hover-dark: rgba(lighten($body-bg-dark, 10%), .4);
+$conference-expanded-bg-dark: rgba(darken($body-bg-dark, 20%), .15);
+
+$nav-link-button-fg-dark: $primary;
+$nav-link-button-bg-hover-dark: rgba(#333, .6);
 
 
 
 // FOOTER
 $footer-bg-dark: $nav-bg-dark;
-
-
-// 
-// // OVERRIDES
-// $blue                      : #8ab4f8;
-// $purple                    : #A92B7A;
-// $red                       : #FF7578;
-// 
-// $colors                    : (
-//   "blue"                   : $blue,
-//   "indigo"                 : $indigo,
-//   "purple"                 : $purple,
-//   "pink"                   : $pink,
-//   "red"                    : $red,
-//   "orange"                 : $orange,
-//   "yellow"                 : $yellow,
-//   "green"                  : $green,
-//   "teal"                   : $teal,
-//   "cyan"                   : $cyan,
-//   "white"                  : $white,
-//   "gray"                   : $gray-600,
-//   "gray-dark"              : $gray-800
-// );
-// 
-// $primary                   : $blue;
-// $danger                    : $red;
-// 
-// $link-color                : $blue;
-// $link-hover-color          : $blue;
-// 
-// $nav-link-color            : $link-color;
-// $nav-link-hover-color      : $link-hover-color;
-// 
-// $list-group-bg             : #202124;
-// $list-group-active-bg      : lighten(#202124, 5%);
-// $list-group-hover-bg       : lighten(#202124, 5%);
-// 
-// $border-color              : #959596;
-// 
-// $code-color                : #D9D90F;
-// 
-// 
-// // GLOBAL
-// $body-bg                   : #202124;
-// $body-fg                   : $white;
-// 
-// 
-// // HEADER
-// $banner-bg                 : $body-bg;
-// $title-bg                  : url(../img/banner-dark.png);
-// 
-// 
-// // MAIN
-// $main-bg                   : $body-bg;
-// 
-// 
-// // NAVIGATION
-// $toggler-active-bg         : $body-bg;
-// $toggler-active-shadow     : 0 0.5rem 1rem rgba(0,0,0,0.15) !important;
-// $toggler-icon              : $navbar-dark-toggler-icon-bg;
-// 
-// $nav-item-b                : 1px solid $main-bg;
-// $nav-item-active-bg        : $main-bg;
-// $nav-item-active-b         : 1px solid $border-color;
-// 
-// $mobile-nav-item-b         : 1px solid $body-bg;
-// $mobile-nav-item-active-b  : $nav-item-active-b;
-// $mobile-nav-item-active-bg : $body-bg;
-// 
-// $nav-dd-img                : url('data:image/svg+xml,<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right" class="svg-inline--fa fa-chevron-right fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="#{$nav-link-color}" d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"></path></svg>');
-// 
-// $bg-light-color            : #e9ecef;
-// $bg-light-hover-color      : #ffffff;
-// 
-// 
-// // WORKSHOPS
-// $timetable-color           : $gray-700;
-// $timetable-w               : .25rem;
-// $timetable-b-s             : $timetable-w solid $timetable-color;
-// $timeline-notch-w          : 1.5rem;
-// $timeline-label-fg         : $gray-300;
-// 
